--- a/vagrant/Quiz_fullstack/static/css/styles.css
+++ b/vagrant/Quiz_fullstack/static/css/styles.css
@@ -1,6 +1,7 @@
 header, #container, footer{
-    margin: 10px 23% 0 23%;
-    width: 56%;
+    margin: 10px calc((100% - 743px)/2) 0 calc((100% - 743px)/2);
+    width: 743px;
+    position: relative;
 }
 
 header{
@@ -18,6 +19,7 @@ body{
 #container{
     margin-top: 1px;
     background-color: white;
+    padding-bottom: 25px;
 }
 
 html, body, #container {
@@ -49,7 +51,62 @@ footer a, footer a:active, footer a:visited{
     text-decoration: none;
     color: whitesmoke;
 }
+.edit img, .delete img{
+    width: 17px;
+    height: 17px;
+}
+.edit, .delete{
+    position: relative;
+    right: 0;
+}
+.edit{
 
-#la{
-    height: 290px;
+}
+.delete{
+
+}
+
+h1{
+    margin-top: 0;
+}
+
+#restaurants{
+    width: 100%;
+}
+
+#restaurants h1{
+    text-align: center;
+    position: relative;
+    top: 15px;
+}
+
+#rests_list{
+    list-style: none;
+    font-size: x-large;
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 4%;
+}
+
+#rests_list a{
+    text-decoration: none;
+    color: dodgerblue;
+}
+
+.border-dashed{
+    margin: 0 10% 0 10%;
+    border: dashed 6px black;
+    border-radius: 45px;
+}
+
+#rests_list tr{
+    height: 45px;
+}
+
+#rests_list tr > td{
+    width: 80%;
+}
+
+#rests_list tr td:not(:first-child){
+    width: 5%;
 }
