--- a/vagrant/Quiz_fullstack/templates/restaurants.html
+++ b/vagrant/Quiz_fullstack/templates/restaurants.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div id="restaurants">
     <h1>Restaurants!</h1>
+    <a href="#" class="add"><img src="{{url_for('static', filename='images/add.png')}}"></a>
     <div class="border-dashed">
         <table id="rests_list">
             <tr>
