add design nd tructure for menu page

--- a/vagrant/Quiz_fullstack/templates/menu.html
+++ b/vagrant/Quiz_fullstack/templates/menu.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>menu</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+{% block content %}
+<div id="menu">
+    <h1>Resturant 01</h1>
+    <a href="#" class="add"><img src="{{url_for('static', filename='images/add.png')}}"></a>
+    <div class="border-dashed">
+        <table id="menu_items">
+            <tr>
+                <td>
+                    <span class="menu_item">
+                        <span class="m_label">Name: </span><span class="m_content">Menu 01</span><br>
+                        <span class="m_label">Course: </span><span class="m_content">Entree</span><br>
+                        <span class="m_label">Price: </span><span class="m_content">$599.36</span><br>
+                        <span class="m_label">Description: </span><br>
+                        <span class="m_content">dfsfsdfsdf gggggggggggs sdfsdfsdf sdfsdfsdfsdfsdfsdf sdfsdfsd</span>
+                    </span>
+                </td>
+                <td><a href="#" class="edit"><img src="{{url_for('static', filename='images/pencil.png')}}" /> </a></td>
+                <td><a href="#" class="delete"><img src="{{url_for('static', filename='images/delete.png')}}" /></a></td>
+            </tr>
+        </table>
+    </div>
+</div>
 
-</body>
-</html>
+{% endblock %}
