--- a/vagrant/Quiz_fullstack/static/css/styles.css
+++ b/vagrant/Quiz_fullstack/static/css/styles.css
@@ -78,7 +78,7 @@ h1{
     width: 100%;
 }
 
-#restaurants h1{
+#restaurants h1, #menu h1{
     text-align: center;
     position: relative;
     top: 15px;
@@ -102,16 +102,35 @@ h1{
     border: dashed 6px black;
     border-radius: 45px;
     width: 63%;
+    padding-bottom: 10px;
 }
 
 #rests_list tr{
     height: 45px;
 }
 
-#rests_list tr > td{
+#rests_list tr > td, #menu_items tr > td{
     width: 80%;
 }
 
-#rests_list tr td:not(:first-child){
+#rests_list tr td:not(:first-child), #menu_items tr td:not(:first-child){
     width: 5.5%;
+}
+
+#menu_items tr{
+    /*border: green solid 1px;*/
+}
+
+.menu_item{
+    /*border: solid darkred 1px;*/
+    text-align: center;
+    display: inline-block;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 18px;
+}
+
+.m_label {
+    font-weight: bold;
 }
