add the restaurant name on menu deletion page

--- a/vagrant/Quiz_fullstack/static/css/styles.css
+++ b/vagrant/Quiz_fullstack/static/css/styles.css
@@ -231,3 +231,12 @@ h1{
     width: 60%;
     margin: 2px 19% 5px 19%;
 }
+
+span#rest{
+    display: block;
+    margin-left: 15px;
+}
+
+span#rest > span{
+    font-weight: bold;
+}
