--- a/vagrant/Quiz_fullstack/templates/deleteMenu.html
+++ b/vagrant/Quiz_fullstack/templates/deleteMenu.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 <div id="delete_menu">
+    <span id="rest"><span>Restaurant: </span> Restaurant 01</span>
     <h1>Menu to delete:</h1>
     <h1>Menu 01</h1>
     <div class="border-dashed">
