--- a/vagrant/Quiz_fullstack/templates/restaurants.html
+++ b/vagrant/Quiz_fullstack/templates/restaurants.html
@@ -2,14 +2,28 @@
 {% block content %}
 <div id="restaurants">
     <h1>Restaurants!</h1>
-    <a href="#" class="add"><img src="{{url_for('static', filename='images/add.png')}}"></a>
+    <a href="{{url_for('newRestaurant')}}" class="add">
+        <img src="{{url_for('static', filename='images/add.png')}}">
+    </a>
     <div class="border-dashed">
         <table id="rests_list">
+            {% for restaurant in restaurants %}
             <tr>
-                <td><a href="#">Restaurant 1</a></td>
-                <td><a href="#" class="edit"><img src="{{url_for('static', filename='images/pencil.png')}}" /> </a></td>
-                <td><a href="#" class="delete"><img src="{{url_for('static', filename='images/delete.png')}}" /></a></td>
+                <td><a href="{{url_for('restaurantMenu', restaurant_id=restaurant.id)}}">{{restaurant.name}}</a></td>
+                <td>
+                    <a href="url_for('editRestaurant', restaurant_id=restaurant.id)" class="edit">
+                        <img src="{{url_for('static', filename='images/pencil.png')}}" />
+                    </a>
+                </td>
+                <td>
+                    <a href="{{url_for('deleteRestaurant', restaurant_id=restaurant.id)}}" class="delete">
+                        <img src="{{url_for('static', filename='images/delete.png')}}" />
+                    </a>
+                </td>
             </tr>
+            {% else %}
+            <tr><td style="font-size: large;">No restaurants fund</td></tr>
+            {% endfor %}
         </table>
     </div>
 </div>
