--- a/vagrant/Quiz_fullstack/templates/newRestaurant.html
+++ b/vagrant/Quiz_fullstack/templates/newRestaurant.html
@@ -3,9 +3,13 @@
 <div id="new_restaurant">
     <h1>Add a new restaurant!</h1>
     <div class="border-dashed">
-        <form enctype="application/x-www-form-urlencoded" method="post" action="">
+        <form enctype="application/x-www-form-urlencoded" method="post" action="{{url_for('newRestaurantPOST')}}">
             <label for="rest">Name: </label><input  type="text" placeholder="Restaurant" id="rest" name="rest_name"/>
-            <span class="inputs"><input type="submit" value="Submit" /> <input type="button" value="Cancel"></span>
+            <span class="inputs"><input type="submit" value="Submit" />
+                <a href="{{url_for('restaurantHome')}}">
+                    <input type="button" value="Cancel" />
+                </a>
+            </span>
         </form>
     </div>
 </div>
