--- a/vagrant/Quiz_fullstack/templates/restaurants.html
+++ b/vagrant/Quiz_fullstack/templates/restaurants.html
@@ -22,7 +22,7 @@
                 </td>
             </tr>
             {% else %}
-            <tr><td style="font-size: large;">No restaurants fund</td></tr>
+            <tr><td style="font-size: large;">No restaurants found</td></tr>
             {% endfor %}
         </table>
     </div>
