--- a/vagrant/Quiz_fullstack/templates/deleteRestaurant.html
+++ b/vagrant/Quiz_fullstack/templates/deleteRestaurant.html
@@ -2,12 +2,16 @@
 {% block content %}
 <div id="delete_restaurant">
     <h1>Restaurant to delete:</h1>
-    <h1>Restaurant 01</h1>
+    <h1>{{restaurant.name}}</h1>
     <div class="border-dashed">
-        <form enctype="application/x-www-form-urlencoded" method="post" action="">
+        <form enctype="application/x-www-form-urlencoded" method="post" action="{{url_for('deleteRestaurantPOST', restaurant_id=restaurant.id)}}">
             <span class="question">Are you sure ?</span>
             <span class="warning">All menus related to this restaurant will be deleted as well</span>
-            <span class="inputs"><input type="submit" value="Yes" /> <input type="button" value="No"></span>
+            <span class="inputs"><input type="submit" value="Yes" />
+                 <a href="{{url_for('restaurantHome')}}">
+                    <input type="button" value="No">
+                </a>
+            </span>
         </form>
     </div>
 </div>
