--- a/vagrant/Quiz_fullstack/templates/editMenu.html
+++ b/vagrant/Quiz_fullstack/templates/editMenu.html
@@ -1,19 +1,24 @@
 {% extends 'layout.html' %}
 {% block content %}
 <div id="new_menu">
-    <span id="rest"><span>Restaurant: </span> Restaurant 01</span>
+    <span id="rest"><span>Restaurant: </span>{{restaurant.name}}</span>
     <h1>Editing menu item</h1>
     <div class="border-dashed">
-        <form enctype="application/x-www-form-urlencoded" method="post" action="">
-            <span class="field"><label for="m_name">Name: </label><input type="text" name="item_name" id="m_name" placeholder="Menu Name"></span>
-            <span class="field"><label for="m_price">Price: </label><input type="text" name="item_price" id="m_price" placeholder="$ USD"></span>
+        <form enctype="application/x-www-form-urlencoded" method="post" action="{{url_for('editMenuPOST', restaurant_id=restaurant.id, item_id=menuitem.id)}}">
+            <span class="field"><label for="m_name">Name: </label><input type="text" name="item_name" id="m_name" placeholder="{{menuitem.name}}"></span>
+            <span class="field"><label for="m_price">Price: </label><input type="text" name="item_price" id="m_price" placeholder="{{menuitem.price}}"></span>
             <span class="field"><label for="m_course">Course:</label>
                 <select name="item_course" id="m_course">
-                    <option value="" selected>- Choose one -</option>
+                    <option value="None">- Choose one -</option>
+                    {% for course in courses %}
+                    <option value="{{course.name}}" {% if course.name ==  menuitem.course %} selected {% endif %}>
+                        {{course.name}}
+                    </option>
+                    {% endfor %}
                 </select>
             </span>
             <span class="field">
-                <label for="m_desc">Description: </label><textarea name="item_desc" id="m_desc" placeholder="Menu item description"></textarea>
+                <label for="m_desc">Description: </label><textarea name="item_desc" id="m_desc" placeholder="{{menuitem.description}}"></textarea>
             </span>
             <span class="inputs"><input type="submit" value="Submit" />
                 <a href="{{url_for('restaurantMenu', restaurant_id=restaurant.id)}}">
